tests/reference/run-multi_error1-2ef69ef.stderr
syntax error: Newline is unexpected here
 --> tests/multi_error1.f90:3:15
  |
3 | integer :: x =
  |               ^ 

syntax error: Newline is unexpected here
 --> tests/multi_error1.f90:4:15
  |
4 | integer :: y =
  |               ^ 

syntax error: Newline is unexpected here
 --> tests/multi_error1.f90:5:13
  |
5 | print *, x +
  |             ^ 

syntax error: Token 'y' (of type 'identifier') is unexpected here
 --> tests/multi_error1.f90:6:12
  |
6 | print *, x y
  |            ^ 
clang: error: no such file or directory: 'tests/multi_error1.tmp.o'
